--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@ nav ul {
     list-style: none;
     padding: 0;
     margin: 1rem 0 0;
+    text-align: center;
 }
 
 nav ul li {
@@ -77,6 +78,7 @@ section {
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-bottom: 2rem;
+    text-align: justify;
 }
 
 h2 {
@@ -100,6 +102,7 @@ h3 {
 ul {
     list-style: disc;
     padding-left: 1.5rem;
+    text-align: left;
 }
 
 ul li {
